# sqlalchemy-foundation-kit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release-please.yml
docs/: index.md
docs/guide/: advanced.md  configuration.md  quickstart.md
docs/reference/: index.md
sqlalchemy_foundation_kit/: __init__.py  _typing.py
sqlalchemy_foundation_kit/base/: __init__.py  _optional.py  engine.py  metadata.py  models.py  serialization.py  types.py
sqlalchemy_foundation_kit/config/: __init__.py  pool.py  postgres.py
sqlalchemy_foundation_kit/contrib/: __init__.py  _metrics_utils.py
sqlalchemy_foundation_kit/contrib/dependency_injector/: __init__.py  _base.py  _deps.py  database.py  metrics.py
sqlalchemy_foundation_kit/contrib/di/: __init__.py  _base.py  _deps.py  database.py  metrics.py
sqlalchemy_foundation_kit/contrib/metrics/: __init__.py  postgres.py
sqlalchemy_foundation_kit/contrib/settings/: __init__.py  postgres.py
sqlalchemy_foundation_kit/contrib/telemetry/: __init__.py  instrumentations.py  uow.py
sqlalchemy_foundation_kit/protocols/: __init__.py  metrics.py
sqlalchemy_foundation_kit/session/: __init__.py  builder.py  connection.py  factories.py  locks.py  manager.py  retry.py
sqlalchemy_foundation_kit/uow/: __init__.py  enums.py  protocols.py  sqlalchemy.py
tests/: conftest.py
tests/integration/: conftest.py  models.py  test_locks_integration.py  test_session_integration.py
tests/unit/base/: test_engine.py  test_metadata.py  test_models.py  test_optional.py  test_serialization.py  test_types.py
tests/unit/contrib/: test_metrics_utils.py
tests/unit/contrib/dependency_injector/: test_base.py  test_database.py  test_deps.py  test_metrics.py
tests/unit/contrib/di/: test_base.py  test_database.py  test_deps.py  test_metrics.py
tests/unit/contrib/metrics/: test_postgres.py  test_postgres_import.py
tests/unit/contrib/settings/: test_postgres.py
tests/unit/contrib/telemetry/: test_instrumentations.py  test_uow.py
tests/unit/session/: test_builder.py  test_connection.py  test_factories.py  test_locks.py  test_manager.py  test_retry.py
tests/unit/uow/: test_sqlalchemy.py
