[project]
name = "sqlalchemy-foundation-kit"
dynamic = ["version"]
description = "Foundation layer for SQLAlchemy-based services with UoW, session management, and observability"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Alex Shalaev", email = "shalaevad.alexey@yandex.ru" }]
keywords = [
    "sqlalchemy",
    "unit-of-work",
    "uow",
    "postgres",
    "postgresql",
    "foundation",
    "microservices",
    "observability",
    "opentelemetry",
    "tracing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0.46,<3.0.0",
    "pydantic>=2.10.6,<3.0.0",
]

[project.urls]
Repository = "https://github.com/bedrock-python/sqlalchemy-foundation-kit"
Documentation = "https://bedrock-python.github.io/sqlalchemy-foundation-kit/"
Changelog = "https://github.com/bedrock-python/sqlalchemy-foundation-kit/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/bedrock-python/sqlalchemy-foundation-kit/issues"

[project.optional-dependencies]
settings = [
    "pydantic-settings>=2.7.1,<3.0.0",
]
metrics = [
    "prometheus-client>=0.21.0,<1.0.0",
]
orjson = [
    "orjson>=3.10.17,<4.0.0",
]
di = [
    "dishka>=1.5.1,<2.0.0",
]
telemetry = [
    "opentelemetry-api>=1.30.0,<2.0.0",
    "opentelemetry-sdk>=1.30.0,<2.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.51b0,<1.0.0",
    "opentelemetry-instrumentation-asyncpg>=0.51b0,<1.0.0",
]
all = [
    "pydantic-settings>=2.7.1,<3.0.0",
    "prometheus-client>=0.21.0,<1.0.0",
    "orjson>=3.10.17,<4.0.0",
    "dishka>=1.5.1,<2.0.0",
    "opentelemetry-api>=1.30.0,<2.0.0",
    "opentelemetry-sdk>=1.30.0,<2.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.51b0,<1.0.0",
    "opentelemetry-instrumentation-asyncpg>=0.51b0,<1.0.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.5",
    "asyncpg>=0.30.0",
]
docs = [
    "zensical>=0.0.37",
    "mkdocstrings-python>=2.0.3",
]
dev = [
    "ruff>=0.15.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    { include-group = "test" },
]

[tool.uv]
link-mode = "copy"

[tool.hatch.version]
path = "sqlalchemy_foundation_kit/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["sqlalchemy_foundation_kit"]

[tool.hatch.build.targets.sdist]
include = ["/sqlalchemy_foundation_kit", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
python_version = "3.12"
files = ["sqlalchemy_foundation_kit"]
mypy_path = ["."]
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "N", "S", "C4", "DTZ", "SIM", "TRY", "PERF", "RUF", "UP", "ANN", "T20", "PTH", "PLC", "PLE", "PLW"]
ignore = ["TRY003", "S101", "ANN401", "RUF012", "S104", "S105", "S106", "ANN204", "DTZ", "ANN", "N802", "PERF401", "SIM105", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
]

[tool.coverage.run]
source = ["sqlalchemy_foundation_kit"]
omit = [
    "tests/*",
    "*/test_*.py",
]
