[project]
name = "sqlalchemy-foundation-kit"
dynamic = ["version"]
description = "Foundation layer for SQLAlchemy-based services with UoW, session management, and observability"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alex Shalaev", email = "shalaevad.alexey@yandex.ru" }]
keywords = [
    "sqlalchemy",
    "unit-of-work",
    "uow",
    "postgres",
    "postgresql",
    "foundation",
    "microservices",
    "observability",
    "opentelemetry",
    "tracing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0.35,<3.0.0",
    "pydantic>=2.5.0,<3.0.0",
]

[project.urls]
Repository = "https://github.com/bedrock-python/sqlalchemy-foundation-kit"
Documentation = "https://bedrock-python.github.io/sqlalchemy-foundation-kit/"
Changelog = "https://github.com/bedrock-python/sqlalchemy-foundation-kit/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/bedrock-python/sqlalchemy-foundation-kit/issues"

[project.optional-dependencies]
settings = [
    "pydantic-settings>=2.3.0,<3.0.0",
]
metrics = [
    "prometheus-client>=0.19.0,<1.0.0",
]
orjson = [
    "orjson>=3.9.0,<4.0.0",
]
dishka = [
    "dishka>=1.3.0,<2.0.0",
]
dependency-injector = [
    "dependency-injector>=4.41.0,<5.0.0",
]
telemetry = [
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0,<1.0.0",
    "opentelemetry-instrumentation-asyncpg>=0.41b0,<1.0.0",
]
all = [
    "pydantic-settings>=2.3.0,<3.0.0",
    "prometheus-client>=0.19.0,<1.0.0",
    "orjson>=3.9.0,<4.0.0",
    "dishka>=1.3.0,<2.0.0",
    "dependency-injector>=4.41.0,<5.0.0",
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0,<1.0.0",
    "opentelemetry-instrumentation-asyncpg>=0.41b0,<1.0.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.5",
    "asyncpg>=0.30.0",
    "testcontainers>=4.11.0",
    "docker>=7.1.0",
]
docs = [
    "zensical>=0.0.37",
    "mkdocstrings-python>=2.0.3",
]
dev = [
    "ruff>=0.15.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    { include-group = "test" },
]

[tool.uv]
link-mode = "copy"

[tool.hatch.version]
path = "sqlalchemy_foundation_kit/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["sqlalchemy_foundation_kit"]

[tool.hatch.build.targets.sdist]
include = ["/sqlalchemy_foundation_kit", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
python_version = "3.11"
files = ["sqlalchemy_foundation_kit"]
mypy_path = ["."]
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "N", "S", "C4", "DTZ", "SIM", "TRY", "PERF", "RUF", "UP", "ANN", "T20", "PTH", "PLC", "PLE", "PLW"]
ignore = ["TRY003", "S101", "ANN401", "RUF012", "S104", "S105", "S106", "ANN204", "DTZ", "ANN", "N802", "PERF401", "SIM105", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLC0415",  # import should be at top-level (OK in tests for isolation)
    "SIM117",   # nested with statements (OK in tests for clarity)
    "RUF015",   # prefer next() over slice (OK in tests)
    "B017",     # blind exception (OK in integration tests)
    "E721",     # type comparison (OK in tests)
    "F841",     # unused variable (OK in tests)
    "RUF059",   # unpacked variable unused (OK in tests)
    "TRY300",   # consider else block (OK in tests)
    "TRY301",   # abstract raise (OK in tests)
    "UP042",    # StrEnum inheritance (OK in tests)
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
]

[tool.coverage.run]
source = ["sqlalchemy_foundation_kit"]
omit = [
    "tests/*",
    "*/test_*.py",
]
